corrected z-index

--- a/_scss/component/_sidebar.scss
+++ b/_scss/component/_sidebar.scss
@@ -211,7 +211,7 @@ a.sidebar-nav-item:focus {
   // border-color: $white;
   position: absolute;
   margin-top: -6rem;
-  margin-left: 3.1rem;
+  margin-left: 3.2rem;
   z-index: 1;
 }
 
